      cupsfilter) made all other users (including cups itself) unable to run
      the filter because of no permission to open the logfile.
    - Put unquoted variables into quotes where appropriate.
    - Never create an outfile in the same directory as the given infile; the
      process might not have write access there.
    - set -e.

 -- Martin Pitt <mpitt@debian.org>  Thu, 14 Aug 2008 17:40:59 +0200

cups (1.3.8-3) experimental; urgency=low

  [ Till Kamppeter ]
  * debian/local/filters/pdf-filters/addtocups,
    debian/local/filters/pdf-filters/removefromcups,
    debian/local/filters/pdf-filters/config-scripts/cups-pdf-filters.m4,
    pdftopdf/Makefile: Avoid that all executables and libraries of CUPS
    get linked against libpoppler. This especially leads to all packages
    dependent on CUPS needing libpoppler, even for building.

 -- Martin Pitt <mpitt@debian.org>  Mon, 11 Aug 2008 16:48:59 +0200

cups (1.3.8-2) experimental; urgency=low

  [ Till Kamppeter ]
  * debian/local/filters/pdf-filters/, debian/local/pstopdf.convs,
    debian/rules, debian/control, debian/copyright, debian/cups.install:
    Introduced the first bunch of infrastructure for using PDF as standard
    print job format. Added CUPS filters imagetopdf, pstopdf, pdftopdf,
    pdftoraster, added build dependency on libpoppler-dev, as the new filters
    are Poppler-based. texttopdf and pdftoijs will be added soon.
    All this is temporary, as the filters are planned to be added to the
    upstream package of CUPS (CUPS STR #2897, #1595).
  * debian/patches/search_mime_files_in_usr_share.dpatch: Replaced by the
    changes which were done for this purpose in CUPS 1.4. In addition to
    the introduction of /usr/share/cups/mime for installing file detection and
    conversion rules as non-conffiles it also changes the reading order to
    all *.types files and the all *.convs files (instead of all in
    /usr/share/cups/mime and then all in /etc/cups). This way