@@ -31,6 +31,9 @@ cups (1.3.8-4) UNRELEASED; urgency=low
     - Never create an outfile in the same directory as the given infile; the
       process might not have write access there.
     - set -e.
+  * debian/local/filters/pdf-filters/filter/texttopdf.c:
+    - Use FreeMono instead of Courier, since texttopdf requires a TrueType
+      font.
 
  -- Martin Pitt <mpitt@debian.org>  Thu, 14 Aug 2008 17:40:59 +0200
 
